docs: update daily